# AI_fashion_styler_BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  testredis.py
ENUMS/: Clothes.py
app/: app.py  db.py  redis.py  schema.py  supabase.py  test.py  user.py
app/api/v1/routes/: clothes.py  posts.py  supabasegen.py  virtual_tryon.py
app/api/v1/schemas/: schema.py
app/routes/: clothes.py
services/: registry.py  virtual_tryon_service.py
services/Notifiers/: MailNotifiers.py
services/Strategies/: uploadstratgies.py
